fine pagina home

--- a/home.html
+++ b/home.html
@@ -111,6 +111,7 @@
                     </div>
                 </div>
             </div>
+            <!-- il carosello in md ha varie ripetizioni preferisco momentaneamente continuare con la prossima pagina -->
             <div class="row my-3">
                 <div class="col">
                     <p class="h5"><strong>Trending now</strong></p>
