mi dispiace del css nell'head ma ho terminato

--- a/home.html
+++ b/home.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
             <!-- il carosello in md ha varie ripetizioni preferisco momentaneamente continuare con la prossima pagina -->
-            <div class="row my-3">
+            <div class="row mt-5 my-3">
                 <div class="col">
                     <p class="h5"><strong>Trending now</strong></p>
                 </div>
@@ -174,7 +174,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div class="row my-3">
+            <div class="row mt-5 my-3">
                 <div class="col">
                     <p class="h5"><strong>Watch it again</strong></p>
                 </div>
@@ -234,7 +234,7 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-            <div class="row my-3">
+            <div class="row my-3 mt-5">
                 <div class="col">
                     <p class="h5"><strong>New Realeases</strong></p>
                 </div>
