--- a/profile-setting.html
+++ b/profile-setting.html
@@ -39,7 +39,7 @@
         }
     </style>
 </head>
-
+<!-- lo stile nell'head era provvisorio non ho fatto in tempo a fare sass -->
 <body class="bg-black">
     <nav class="navbar bg-black">
         <div class="container">
