cambiato dark in black

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-black" data-bs-theme="dark">
         <div class="container-fluid ">
             <a class="navbar-brand" href="#"><img src="/assets/netflix_logo.png" alt="netflix logo"
                     class="netflixlogo"></a>
@@ -87,14 +87,14 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid bg-dark text-light">
+    <div class="container-fluid bg-black text-light">
         <div>
             <div class="row p-2">
                 <div class="col-4 col-lg-2">
                     <p class="h3 text-light"><strong>TV-Shows</strong></p>
                 </div>
                 <div class="col-4 col-md-2 d-none d-lg-flex position-relative"><select
-                        class="form-select bg-dark text-light formgen p-3 p-md-2" aria-label="Default select example">
+                        class="form-select bg-black text-light formgen p-3 p-md-2" aria-label="Default select example">
                         <option selected> Genres </option>
                         <option value="1">Horror</option>
                         <option value="2">Comedy</option>
