errori di battitura

--- a/profile-setting.html
+++ b/profile-setting.html
@@ -86,7 +86,7 @@
                         <div class="row border-top  border-secondary py-4">
                             <div class="col">
                                 <p class="text-secondary h5">Maturity Settings:</p>
-                                <button type="button" class="btn small noround btn-pers p-2 text-light fw-semibold">ALL
+                                <button type="button" class="btn small noround btn-dark p-2 text-light fw-semibold">ALL
                                     MATURITY RATINGS </button>
                                 <p class="mt-2 text-secondary">Show title of <strong>all maturity ratings</strong> for
                                     this profile</p>
