--- a/home.html
+++ b/home.html
@@ -343,7 +343,7 @@
               </div>
           
               <div class="row">
-                <div class="col offset-0 offset-md-1 py-4 text-white-50">p>&copy; 1997-2019 Netflix, Inc. {i-owgqpivqehiip5463}</p></div>
+                <div class="col offset-0 offset-md-1 py-4 text-white-50">&copy; 1997-2019 Netflix, Inc. {i-owgqpivqehiip5463}</p></div>
               </div>
             </footer>
           </div>
